--- a/src/routes/my-artists/my-artists-page.css
+++ b/src/routes/my-artists/my-artists-page.css
@@ -103,12 +103,6 @@
 			animation: spin 0.8s linear infinite;
 		}
 
-		@keyframes spin {
-			to {
-				transform: rotate(1turn);
-			}
-		}
-
 		.empty-icon {
 			inline-size: 4rem;
 			block-size: 4rem;
